--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,15 @@
 		"db:studio": "drizzle-kit studio"
 	},
 	"dependencies": {
+		"@fastify/jwt": "^10.0.0",
 		"@libsql/client": "^0.15.15",
+		"bcryptjs": "^3.0.3",
 		"dotenv": "^17.2.3",
 		"drizzle-orm": "^0.45.1",
 		"fastify": "^5.6.2"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
 		"@types/node": "^25.0.3",
 		"drizzle-kit": "^0.31.8",
 		"tsx": "^4.21.0",
