--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
 	"description": "",
 	"license": "ISC",
 	"author": "",
-	"type": "commonjs",
-	"main": "index.js",
+	"type": "module",
+	"main": "dist/index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "tsx watch src/server.ts",
@@ -13,6 +13,7 @@
 		"db:studio": "drizzle-kit studio"
 	},
 	"dependencies": {
+		"@fastify/cors": "^11.2.0",
 		"@fastify/jwt": "^10.0.0",
 		"@libsql/client": "^0.15.15",
 		"bcryptjs": "^3.0.3",
