--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@fastify/cors": "^11.2.0",
 		"@fastify/jwt": "^10.0.0",
+		"@fastify/static": "^9.0.0",
 		"@libsql/client": "^0.15.15",
 		"bcryptjs": "^3.0.3",
 		"dotenv": "^17.2.3",
